--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,33 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_v2.11.1.1_.282015-11-01_19:30_Sun.29'>Release: v2.11.1.1 (2015-11-01 19:30 Sun)</span>
+    </h2>
+    <p>
+      v2.11.1 is a minor release. There are a few minor fixes for Hebrew wikis.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Minor_fixes_for_Hebrew_wikis'>Minor fixes for Hebrew wikis</span>
+    </h3>
+    <p>
+      v2.11.1 now supports Hebrew dates for the time function like <code>{{#time:xhxjj xjx xhxjY|28-08-1608 + 341 days}}</code> generating <code>ד' ה'שס\"ט"</code>. In addition there is basic support for Hebrew grammar like <code>{{grammar:prefixed|וabc}}</code> generating <code>ווabc</code>.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Image_packages_for_English_Wikipedia.2C_Hebrew.2C_Norwegian_and_Vietnamese_wikis'>Image packages for English Wikipedia, Hebrew, Norwegian and Vietnamese wikis</span>
+    </h3>
+    <p>
+      The English Wikipedia update for 2015-10 is finally up. The rest of the wikis are up at archive.org
+    </p>
+    <h3>
+      <span class='mw-headline' id='Next_release:_v2.11.2'>Next release: v2.11.2</span>
+    </h3>
+    <p>
+      I've been working on a new UI for the Android alpha. I've also spent time rewriting the HTML dump. For the next few weeks, I don't expect to do anything with the desktop app outside of bug fixing.
+    </p>
+    <p>
+      For wikis, I'll move on to Danish, Serbo-Croatian, Hungarian and Esperanto wikis
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_NONE_.282015-10-25_20:00_Sun.29'>Release: NONE (2015-10-25 20:00 Sun)</span>
     </h2>
     <p>
