--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 </p>
 
 <ul>
-  <li> Post to XOWA's discussion page: <a href="https://github.com/gnosygnu/xowa/issues/" class="external text" rel="nofollow">https://github.com/gnosygnu/xowa/issues</a> If you are not a SourceForge user, you can still post as &quot;Anonymous&quot;
+  <li> Post to XOWA's discussion page: <a href="https://github.com/gnosygnu/xowa/issues/" class="external text" rel="nofollow">https://github.com/gnosygnu/xowa/issues</a>
   </li>
   <li> Post to my user talk page: <a href="http://en.wikipedi&#97;.org/wiki/User_talk:gnosygnu" class="external text" rel="nofollow">http://en.wikipedi&#97;.org/wiki/User_talk:gnosygnu</a>. If you are not a Wikipedia user, you will still be able to post messages (just like editing any other part of Wikipedia)
   </li>
