--- a/download.html
+++ b/download.html
@@ -21,31 +21,31 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_windows_64_v2.10.3.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.1.1/xowa_app_windows_64_v2.11.1.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_windows_v2.10.3.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.1.1/xowa_app_windows_v2.11.1.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_linux_64_v2.10.3.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.1.1/xowa_app_linux_64_v2.11.1.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_linux_v2.10.3.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.1.1/xowa_app_linux_v2.11.1.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_macosx_64_v2.10.3.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.1.1/xowa_app_macosx_64_v2.11.1.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.10.3.1/xowa_app_macosx_v2.10.3.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.1.1/xowa_app_macosx_v2.11.1.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.10.3.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.11.1.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -55,31 +55,17 @@
     </h2>
 
     <h2>
-      <span class='mw-headline' id='v2.10.3.1_.282015-10-18.29'>v2.10.3.1 (2015-10-18)</span>
+      <span class='mw-headline' id='v2.11.1.1_.282015-11-02.29'>v2.11.1.1 (2015-11-02)</span>
     </h2>
-    <p>
-      <b>fix</b>
-    </p>
-    <ul>
-      <li>
-        File: Fix files not downloading for commons.wikimedia.org {detected by Miles}. See: <a href="https://commons.wikimedia.org/wiki/Featured_pictures">https://commons.wikimedia.org/wiki/Commons:Featured_pictures</a> [broken since:v2.10.2.1]
-      </li>
-      <li>
-        Xtn.Translate: Always enable &lt;translate&gt; (affects &lt;translate&gt; and &lt;languages&gt; not working on some www.mediawiki.org pages). See: <a href="https://www.mediawiki.org/wiki/Download">https://www.mediawiki.org/wiki/Download</a> [broken since:v2.10.2.1]
-      </li>
-    </ul>
     <p>
       <b>change</b>
     </p>
     <ul>
       <li>
-        Lang: Handle variants inside html tags (affects incorrect content for some pages on Chinese / Serbian wikis); EX:&lt;img id='hk' title='hk-{hk}-hk' class='hk'/&gt;. See: <a href="https://sr.wikinews.org/wiki/Проглашени_победници_„Вики_воли_Земљу">https://sr.wikinews.org/wiki/Проглашени_победници_„Вики_воли_Земљу</a>"
+        ParserFunctions: Calculate correct Hebrew date (affects script error on many he.w pages). See: <a href="https://he.wikipedia.org/wiki/מהר&quot;ל_מפראג">https://he.wikipedia.org/wiki/מהר"ל_מפראג</a> <a href="https://he.wikipedia.org/wiki/רש">https://he.wikipedia.org/wiki/רש</a>"י <a href="https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק">https://he.wikipedia.org/wiki/אברהם_יצחק_הכהן_קוק</a> <a href="https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך">https://he.wikipedia.org/wiki/אלעזר_מנחם_מן_שך</a> <a href="https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים">https://he.wikipedia.org/wiki/ויקיפדיה:עמוד_ראשי/מקבץ_ערכים</a>
       </li>
       <li>
-        ParserFunctions: Support "pages", "files", "subcats" for {{PAGESINCATEGORY}} (affects expression error on some pages). See: <a href="https://zh.wikipedia.org/wiki/Wikipedia:电子游戏专题/状态图表">https://zh.wikipedia.org/wiki/Wikipedia:电子游戏专题/状态图表</a> <a href="https://commons.wikimedia.org/wiki/Featured_pictures">https://commons.wikimedia.org/wiki/Commons:Featured_pictures</a>
-      </li>
-      <li>
-        Xtn.Intersection: Do not fail if ordermethod is invalid (affects missing content on some pages). See: <a href="https://sr.wiktionary.org/wiki/Викиречник:Википројекат_1001_арапска_реч/Списак_уноса">https://sr.wiktionary.org/wiki/Викиречник:Википројекат_1001_арапска_реч/Списак_уноса</a>
+        ParserFunctions.Grammar: Implement Hebrew grammar (affects sidebar showing grammar for some Hebrew wikis). See: <a href="https://he.wikibooks.org/wiki/עמוד_ראשי">https://he.wikibooks.org/wiki/עמוד_ראשי</a>
       </li>
     </ul>
     <p>
@@ -87,21 +73,30 @@
     </p>
     <ul>
       <li>
-        Package: Release image update for Serbian wikis (2015-10). See: <a href="https://archive.org/details/Xowa_srwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_srwiki_latest</a>
+        Package: Release image update for English Wikipedia (2015-10). See: <a href="https://archive.org/details/Xowa_enwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_enwiki_latest</a>
       </li>
       <li>
-        Package: Release image update for Malay wikis (2015-10). See: <a href="https://archive.org/details/Xowa_mswiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_mswiki_latest</a>
+        Package: Release image update for Hebrew wikis (2015-10). See: <a href="https://archive.org/details/Xowa_hewiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_hewiki_latest</a>
       </li>
       <li>
-        Package: Release image update for Bulgarian wikis (2015-10). See: <a href="https://archive.org/details/Xowa_bgwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_bgwiki_latest</a>
+        Package: Release image update for Norwegian wikis (2015-10). See: <a href="https://archive.org/details/Xowa_nowiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_nowiki_latest</a>
+      </li>
+      <li>
+        Package: Release image update for Vietnamese wikis (2015-10). See: <a href="https://archive.org/details/Xowa_viwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_viwiki_latest</a>
       </li>
     </ul>
     <p>
-      <b>minor</b>
+      <b>significant</b>
     </p>
     <ul>
       <li>
-        Javascript: Position notification in "top center" not "top right". See: [[Help:Options/Window]]
+        ParserFunctions: Default date to today for unavailable parts (affects wrong date showing on some pages); EX:{{#time:Y-m-d|2015}} -&gt; "2015-10-26" x&gt; "2015-01-01". See: <a href="https://en.wikipedia.org/wiki/Mariyinsky_Palace">https://en.wikipedia.org/wiki/Mariyinsky_Palace</a>
+      </li>
+      <li>
+        Xml_dump: Use &lt;siteinfo&gt;'s &lt;case&gt;, if case attribute is not available at "&lt;namespace&gt;" level (affects some xml dumps not being importable) {detected by paul2520}. See: <a href="https://dumps.wikimedia.org/sep11wiki" rel="nofollow" class="external free">https://dumps.wikimedia.org/sep11wiki</a>
+      </li>
+      <li>
+        Parser.Lnki: Use 1st imagetype argument when multiple are listed of "thumb|frame|frameless" (affects some pages showing incorrectly sized images); EX:[[File:A.png|thumb|frame]] -&gt; thumb x&gt; frame. See: <a href="https://he.wikipedia.org/wiki/מספן_המודיעין">https://he.wikipedia.org/wiki/מספן_המודיעין</a>
       </li>
     </ul>
     <p>
@@ -109,18 +104,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Fix broken diagnostic for Wikivoyage. See: [[Help:Diagnostics/Xtns/Wikivoyage/All]]
-      </li>
-    </ul>
-    <p>
-      <b>doc</b>
-    </p>
-    <ul>
-      <li>
-        Doc: Add documentation for standalone JRE {detected by Miles}. See: [[Help:Installing to a flash memory card]]
-      </li>
-      <li>
-        Doc: Fix url for English Wikipedia images for Portal, Wikipedia and other namespaces {detected by Miles}. See: <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_wiki_file_ns-100.7z" class="external text" rel="nofollow">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_wiki_file_ns-100.7z</a>
+        Scribunto: Handle StackOverflow errors in Module code (affects 1 vi.w page failing to load). See: <a href="https://vi.wikipedia.org/wiki/Hyderabad,_Sindh">https://vi.wikipedia.org/wiki/Hyderabad,_Sindh</a>
       </li>
     </ul>
     <p>
@@ -128,9 +112,18 @@
     </p>
     <ul>
       <li>
-        Source: Cleanup xowa namespaces.
+        Source: Move gplx.ios to gplx.core.ios.
+      </li>
+      <li>
+        Source: Clean up gplx.xowa.htmls.
+      </li>
+      <li>
+        Source: Clean up Html_dump classes.
       </li>
     </ul>
+    <p>
+      <br>
+    </p>
     
 <!-- page_end -->
     </div>
