--- a/image_dbs.html
+++ b/image_dbs.html
@@ -332,6 +332,38 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-10-06
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-01
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            4.6
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa (v2b)<br>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-10-06_file_v2b.7z" rel="nofollow" class="external text">images.update.2015-10-06.v2b (.xowa)</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
             <a href="https://en.wiktionary.org/wiki/">https://en.wiktionary.org</a>
           </p>
         </td>
@@ -1804,39 +1836,37 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://no.wikipedia.org/wiki/">http://no.wikipedia.org</a><br>
-            <a href="https://no.wiktionary.org/wiki/">http://no.wiktionary.org</a><br>
-            <a href="https://no.wikisource.org/wiki/">http://no.wikisource.org</a><br>
-            <a href="https://no.wikiquote.org/wiki/">http://no.wikiquote.org</a><br>
-            <a href="https://no.wikibooks.org/wiki/">http://no.wikibooks.org</a><br>
-            <a href="https://no.wikinews.org/wiki/">http://no.wikinews.org</a><br>
+            <a href="https://no.wikipedia.org/wiki/">https://no.wikipedia.org</a><br>
+            <a href="https://no.wiktionary.org/wiki/">https://no.wiktionary.org</a><br>
+            <a href="https://no.wikisource.org/wiki/">https://no.wikisource.org</a><br>
+            <a href="https://no.wikiquote.org/wiki/">https://no.wikiquote.org</a><br>
+            <a href="https://no.wikibooks.org/wiki/">https://no.wikibooks.org</a><br>
+            <a href="https://no.wikinews.org/wiki/">https://no.wikinews.org</a><br>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-16<br>
-            2014-09-30<br>
-            2014-10-02<br>
-            2014-09-27<br>
-            2014-09-28<br>
-            2014-09-28<br>
+            2015-10-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-02
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5.8
+            6.5
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_nowiki_latest/Xowa_nobundle_2014-10-10.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_nowiki_latest/Xowa_nobundle_2015-10-06.7z" rel="nofollow" class="external text">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -1853,29 +1883,27 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-10-01<br>
-            2014-10-08<br>
-            2014-09-25<br>
-            2014-10-04<br>
-            2014-09-26<br>
-            2014-09-27<br>
+            2015-10-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-02
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            7.2
+            7.8
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_viwiki_latest/Xowa_vibundle_2014-10-18.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_viwiki_latest/Xowa_vibundle_2015-10-06.7z" rel="nofollow" class="external text">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -2045,7 +2073,7 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_bnwiki_latest/Xowa_bnbundle_2015-08-05.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_bnwiki_latest/Xowa_bnbundle_2015-08-05.7z" class="external text" rel="nofollow">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -2087,7 +2115,7 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_fawiki_latest/Xowa_fabundle_2015-08-05.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_fawiki_latest/Xowa_fabundle_2015-08-05.7z" class="external text" rel="nofollow">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -2281,41 +2309,38 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://he.wikipedia.org/wiki/">http://he.wikipedia.org</a><br>
-            <a href="https://he.wiktionary.org/wiki/">http://he.wiktionary.org</a><br>
-            <a href="https://he.wikisource.org/wiki/">http://he.wikisource.org</a><br>
-            <a href="https://he.wikivoyage.org/wiki/">http://he.wikivoyage.org</a><br>
-            <a href="https://he.wikiquote.org/wiki/">http://he.wikiquote.org</a><br>
-            <a href="https://he.wikibooks.org/wiki/">http://he.wikibooks.org</a><br>
-            <a href="https://he.wikinews.org/wiki/">http://he.wikinews.org</a>
+            <a href="https://he.wikipedia.org/wiki/">https://he.wikipedia.org</a><br>
+            <a href="https://he.wiktionary.org/wiki/">https://he.wiktionary.org</a><br>
+            <a href="https://he.wikisource.org/wiki/">https://he.wikisource.org</a><br>
+            <a href="https://he.wikivoyage.org/wiki/">https://he.wikivoyage.org</a><br>
+            <a href="https://he.wikiquote.org/wiki/">https://he.wikiquote.org</a><br>
+            <a href="https://he.wikibooks.org/wiki/">https://he.wikibooks.org</a><br>
+            <a href="https://he.wikinews.org/wiki/">https://he.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-07-02<br>
-            2014-06-30<br>
-            2014-07-07<br>
-            2014-07-05<br>
-            2014-06-25<br>
-            2014-06-23<br>
-            2014-07-15
+            2015-10-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-02
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5.8
+            7.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_hebundle_latest" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_hewiki_latest/Xowa_hebundle_2015-10-06.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
