--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
 </td>
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
+
+  <b>2015-11-02</b> English Wikipedia, Hebrew, Norwegian and Vietnamese wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_hewiki_latest" class="external text" rel="nofollow">Hewbrew wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_nowiki_latest" class="external text" rel="nofollow">Norwegian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_viwiki_latest" class="external text" rel="nofollow">Vietnamese wikis</a>
+    </li>
+  </ul>
+
   <b>2015-10-18</b> Serbian, Bulgarian and Malay wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_srwiki_latest" class="external text" rel="nofollow">Serbian wikis</a>
@@ -136,23 +149,6 @@
     <li> <a href="https://archive.org/details/Xowa_trwiki_latest" class="external text" rel="nofollow">Turkish wikis</a>
     </li>
   </ul>
-
-  <b>2015-08-31</b> Ukrainian and Finnish wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_ukwiki_latest" class="external text" rel="nofollow">Ukrainian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_fiwiki_latest" class="external text" rel="nofollow">Finnish wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-08-24</b> Persian and Bengali wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_fawiki_latest" class="external text" rel="nofollow">Persian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_bnwiki_latest" class="external text" rel="nofollow">Bengali wikis</a>
-    </li>
-  </ul>
-  
 </td>
 </tr>
 </table>
