--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2015-11-08</b> Danish, Croatian, Serbo-Croatian and Estonian wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_dawiki_latest" class="external text" rel="nofollow">Danish Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_shwiki_latest" class="external text" rel="nofollow">Serbo-Croatian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_hrwiki_latest" class="external text" rel="nofollow">Croatian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_eswiki_latest" class="external text" rel="nofollow">Estonian wikis</a>
+    </li>
+  </ul>
+
   <b>2015-11-02</b> English Wikipedia, Hebrew, Norwegian and Vietnamese wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
