--- a/image_dbs.html
+++ b/image_dbs.html
@@ -2384,37 +2384,36 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://da.wikipedia.org/wiki/">http://da.wikipedia.org</a><br>
-            <a href="https://da.wiktionary.org/wiki/">http://da.wiktionary.org</a><br>
-            <a href="https://da.wikisource.org/wiki/">http://da.wikisource.org</a><br>
-            <a href="https://da.wikiquote.org/wiki/">http://da.wikiquote.org</a><br>
-            <a href="https://da.wikibooks.org/wiki/">http://da.wikibooks.org</a>
+            <a href="https://da.wikipedia.org/wiki/">https://da.wikipedia.org</a><br>
+            <a href="https://da.wiktionary.org/wiki/">https://da.wiktionary.org</a><br>
+            <a href="https://da.wikisource.org/wiki/">https://da.wikisource.org</a><br>
+            <a href="https://da.wikiquote.org/wiki/">https://da.wikiquote.org</a><br>
+            <a href="https://da.wikibooks.org/wiki/">https://da.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-07-25<br>
-            2014-07-30<br>
-            2014-07-27<br>
-            2014-07-26<br>
-            2014-07-26
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-08
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            3.5
+            3.8
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_dawiki_latest" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_dawiki_latest/Xowa_dabundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2422,30 +2421,32 @@
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://sh.wikipedia.org/wiki/">https://sh.wikipedia.org</a><br>
-            <a href="https://sh.wiktionary.org/wiki/">https://sh.wiktionary.org</a><br>
+            <a href="https://sh.wiktionary.org/wiki/">https://sh.wiktionary.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-08-28<br>
-            2014-08-22<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-08
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            3.7
+            4.6
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_shwiki_latest/Xowa_shbundle_2014-08-30.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_shwiki_latest/Xowa_shbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2456,33 +2457,32 @@
             <a href="https://hr.wiktionary.org/wiki/">https://hr.wiktionary.org</a><br>
             <a href="https://hr.wikisource.org/wiki/">https://hr.wikisource.org</a><br>
             <a href="https://hr.wikiquote.org/wiki/">https://hr.wikiquote.org</a><br>
-            <a href="https://hr.wikibooks.org/wiki/">https://hr.wikibooks.org</a><br>
+            <a href="https://hr.wikibooks.org/wiki/">https://hr.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-05<br>
-            2014-09-03<br>
-            2014-09-03<br>
-            2014-09-03<br>
-            2014-09-03<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-08
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.7
+            2.9
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_hrwiki_latest/Xowa_hrbundle_2014-09-05.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_hrwiki_latest/Xowa_hrbundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
@@ -2494,34 +2494,32 @@
             <a href="https://eo.wikisource.org/wiki/">https://eo.wikisource.org</a><br>
             <a href="https://eo.wikiquote.org/wiki/">https://eo.wikiquote.org</a><br>
             <a href="https://eo.wikibooks.org/wiki/">https://eo.wikibooks.org</a><br>
-            <a href="https://eo.wikinews.org/wiki/">https://eo.wikinews.org</a><br>
+            <a href="https://eo.wikinews.org/wiki/">https://eo.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-09-04<br>
-            2014-09-05<br>
-            2014-08-30<br>
-            2014-08-30<br>
-            2014-09-04<br>
-            2014-08-30<br>
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-11-08
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            4.4
+            5
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_eowiki_latest/Xowa_eobundle_2014-09-13.7z" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_eowiki_latest/Xowa_eobundle_2015-11-02.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
